[package]
name = "lyp"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.12", optional = true, default-features = false }
crossterm = { version = "0.17", optional = true, default-features = false }

[features]
default = ["crossterm-backend"]
crossterm-backend = ["tui/crossterm", "crossterm"]

[dev-dependencies]
rand = "0.7"
argh = "0.1"
